# Module-Context

./: .gitignore  CMakeLists.txt  README.md  README.txt
.github/workflows/: build.yml
app/: main.cpp
core/api/framework/: Export.h  IContext.h  IModule.h  IModuleManager.h  ModuleFactory.h  ModuleState.h  exception.h  export.h  icontext.h  imodule.h  imodule_manager.h  module_factory.h  module_state.h  module_traits.h
core/api/modules/: ithread_pool.h
core/framework/: Context.cpp  Context.h  ModuleBase.cpp  ModuleBase.h  ModuleManager.cpp  ModuleManager.h  context.cpp  context.h  context_access.cpp  context_access.h  module_base.cpp  module_base.h  module_manager.cpp  module_manager.h  shared_library.cpp  shared_library.h
core/modules/threadpool/: thread_pool_module.cpp  thread_pool_module.h
docs/: architecture-diagram.md  architecture-review.md  architecture.md  code_audit_2026-04-17.md  integration_windows_offline.md  module_development_manual.md  rabbitmq-60fps-leadership-report.html  rabbitmq-60fps-leadership-report.md  rabbitmq-perf-benchmark.md  rabbitmq-task-flow-test-plan.md  rabbitmq-throughput-root-cause-and-windows-forecast.md  rabbitmq_bus_access.md
examples/: CMakeLists.txt  basic_context_lifecycle.cpp  module_config.sample.json
include/core/api/framework/: IContext.h  IModule.h  IModuleManager.h  ModuleFactory.h  ModuleState.h
include/core/api/messaging/: IMessageBusService.h  Types.h
include/module_context/framework/: Export.h  IContext.h  IModule.h  IModuleManager.h  ModuleState.h
include/module_context/messaging/: IMessageBusService.h  Types.h
modules/: CMakeLists.txt
modules/rabbitmq_bus/: CMakeLists.txt  MessageBusServiceProxy.cpp  MessageBusServiceProxy.h  RabbitMqBusModule.cpp  RabbitMqBusModule.h  RabbitMqBusModuleInternal.h
modules/rabbitmq_bus/src/: RabbitMqBusModule.cpp  RabbitMqBusModule.h
modules/rabbitmq_bus/src/internal/: ConfigTypes.h  DriverOps.h  MessageBusServiceProxy.cpp  MessageBusServiceProxy.h  SharedState.h
scripts/: package_windows_offline_bundle.sh
src/framework/: Context.cpp  Context.h  ModuleBase.cpp  ModuleBase.h  ModuleManager.cpp  ModuleManager.h  ServiceFactory.cpp  ServiceFactory.h  ServiceRegistry.cpp  ServiceRegistry.h
src/plugin/: ModuleFactory.h
tests/: CMakeLists.txt  module_base_lifecycle_test.cpp  module_manager_config_test.cpp  module_manager_config_test_plugin.cpp  rabbitmq_bus_module_test.cpp  rabbitmq_bus_plugin_integration_test.cpp
tests/integration/: integration.defaults.env  run_integration_tests.ps1  run_integration_tests.sh
tests/integration/rabbitmq_perf/: bootstrap_rabbitmq.sh  cleanup_perf_env.sh  common.cpp  common.h  docker-compose.yml  generate_perf_report.py  master_perf.cpp  monitor_perf.py  run_perf_test.sh  show_perf_status.sh  worker_perf.cpp
tests/integration/rabbitmq_task_flow/: bootstrap_rabbitmq.sh  cleanup_task_flow_env.sh  common.cpp  common.h  docker-compose.yml  master_sim.cpp  run_task_flow_test.sh  show_task_flow_status.sh  worker_sim.cpp
